xrpl-common-stdlib/tests/locator/fail_ledger_get_array_not_readable.stderr
error[E0277]: `Array` cannot be read from a ledger object
  --> tests/locator/fail_ledger_get_array_not_readable.rs:17:53
   |
17 |     let _ = Obj.path().field(sfield::Signers).get::<Array>();
   |                                               ---   ^^^^^ the trait `FromLedger` is not implemented for `Array`
   |                                               |
   |                                               required by a bound introduced by this call
   |
   = note: array/object fields can't be decoded directly. Navigate into them with a locator (`.field(sfield::X)...`) or use a typed accessor
   = help: the following other types implement trait `FromLedger`:
             AccountID
             Amount
             Blob<N>
             Currency
             Issue
             UInt<xrpl_common_stdlib::::types::uint::UInt128::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt160::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt192::{constant#0}>
           and $N others
note: required by a bound in `LedgerPathBuilder::get`
  --> src/fields/locator.rs
   |
   |     pub fn get<T: FromLedger>(&self) -> Result<T> {
   |                   ^^^^^^^^^^ required by this bound in `LedgerPathBuilder::get`
